--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ opencv-python-headless
 mmcv>=2.0.0rc3
 mmdet>=3.0.0rc5
 mmengine>=0.4.0
-mmrotate>=1.0.0rc1
+git+https://github.com/open-mmlab/mmrotate.git@dev-1.x#egg=mmrotate
 openmim==0.3.3
 pinferencia
 streamlit
